--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,6 +21,9 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  transition:
+    background-color 1s ease,
+    color 1s ease;
 }
 
 @custom-variant dark (&:where(.dark, .dark *));
