--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,3 +27,15 @@ body {
 }
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
