--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,23 +44,28 @@ body {
 @keyframes planetShow {
   0% {
     opacity: 0;
-    transform: translateX(calc(100vw + 100px));
+    transform: translate(calc(100vw + 100px));
   }
 
   100% {
     opacity: 1;
-    transform: translateX(0);
+    transform: translate(0, 0);
   }
 }
 
 @keyframes planetHide {
   0% {
     opacity: 1;
-    transform: translateX(0);
+    transform: translate(0, 0);
+  }
+
+  50% {
+    opacity: .5;
+    transform: translate(calc(calc(50vw + 50px) * -1), calc(30px * -1));
   }
 
   100% {
     opacity: 0;
-    transform: translateX(calc(calc(100vw + 100px) * -1));
+    transform: translate(calc(calc(100vw + 100px) * -1), 0);
   }
 }
